Phase3/cool.output
Terminals unused in grammar

   ERROR


State 55 conflicts: 9 shift/reduce
State 105 conflicts: 10 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: classes

    2 classes: class
    3        | classes class

    4 class: CLASS TYPEID '{' features '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features '}' ';'
    6      | error

    7 features: nonempty_features
    8         | %empty

    9 nonempty_features: feature ';' nonempty_features
   10                  | feature ';'

   11 feature: OBJECTID '(' formals ')' ':' TYPEID '{' nonempty_expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression
   14        | error

   15 formals: nonempty_formals
   16        | %empty

   17 nonempty_formals: formal ',' nonempty_formals
   18                 | formal

   19 formal: OBJECTID ':' TYPEID

   20 expressions: expressions ',' nonempty_expr
   21            | nonempty_expr
   22            | %empty

   23 nonempty_block: nonempty_expr ';'
   24               | nonempty_expr ';' nonempty_block
   25               | error

   26 cases: cases branch ';'
   27      | branch ';'

   28 branch: OBJECTID ':' TYPEID DARROW expression

   29 inner_let: OBJECTID ':' TYPEID ASSIGN expression IN expression
   30          | OBJECTID ':' TYPEID IN expression
   31          | OBJECTID ':' TYPEID ASSIGN expression ',' inner_let
   32          | OBJECTID ':' TYPEID ',' inner_let

   33 expression: nonempty_expr
   34           | %empty

   35 nonempty_expr: OBJECTID ASSIGN nonempty_expr
   36              | nonempty_expr '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr '.' OBJECTID '(' expressions ')'
   38              | OBJECTID '(' expressions ')'
   39              | IF nonempty_expr THEN nonempty_expr ELSE nonempty_expr FI
   40              | while_exp
   41              | '{' nonempty_block '}'
   42              | LET inner_let
   43              | CASE nonempty_expr OF cases ESAC
   44              | NEW TYPEID
   45              | ISVOID nonempty_expr
   46              | nonempty_expr '+' nonempty_expr
   47              | nonempty_expr '-' nonempty_expr
   48              | nonempty_expr '*' nonempty_expr
   49              | nonempty_expr '/' nonempty_expr
   50              | '~' nonempty_expr
   51              | nonempty_expr '<' nonempty_expr
   52              | nonempty_expr LE nonempty_expr
   53              | nonempty_expr '=' nonempty_expr
   54              | NOT nonempty_expr
   55              | '(' nonempty_expr ')'
   56              | OBJECTID
   57              | INT_CONST
   58              | STR_CONST
   59              | BOOL_CONST
   60              | error

   61 while_exp: WHILE nonempty_expr LOOP expression POOL
   62          | WHILE nonempty_expr LOOP error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 36 37 38 55
')' (41) 11 36 37 38 55
'*' (42) 48
'+' (43) 46
',' (44) 17 20 31 32
'-' (45) 47
'.' (46) 36 37
'/' (47) 49
':' (58) 11 12 13 19 28 29 30 31 32
';' (59) 4 5 9 10 23 24 26 27
'<' (60) 51
'=' (61) 53
'@' (64) 36
'{' (123) 4 5 11 41
'}' (125) 4 5 11 41
'~' (126) 50
error (256) 6 14 25 60 62
CLASS (258) 4 5
ELSE (259) 39
FI (260) 39
IF (261) 39
IN (262) 29 30
INHERITS (263) 5
LET (264) 42
LOOP (265) 61 62
POOL (266) 61
THEN (267) 39
WHILE (268) 61 62
CASE (269) 43
ESAC (270) 43
OF (271) 43
DARROW (272) 28
NEW (273) 44
ISVOID (274) 45
STR_CONST (275) 58
INT_CONST (276) 57
BOOL_CONST (277) 59
TYPEID (278) 4 5 11 12 13 19 28 29 30 31 32 36 44
OBJECTID (279) 11 12 13 19 28 29 30 31 32 35 36 37 38 56
ASSIGN (280) 13 29 31 35
NOT (281) 54
LE (282) 52
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
classes (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
features (49)
    on left: 7 8, on right: 4 5
nonempty_features (50)
    on left: 9 10, on right: 7 9
feature (51)
    on left: 11 12 13 14, on right: 9 10
formals (52)
    on left: 15 16, on right: 11
nonempty_formals (53)
    on left: 17 18, on right: 15 17
formal (54)
    on left: 19, on right: 17 18
expressions (55)
    on left: 20 21 22, on right: 20 36 37 38
nonempty_block (56)
    on left: 23 24 25, on right: 24 41
cases (57)
    on left: 26 27, on right: 26 43
branch (58)
    on left: 28, on right: 26 27
inner_let (59)
    on left: 29 30 31 32, on right: 31 32 42
expression (60)
    on left: 33 34, on right: 13 28 29 30 31 61
nonempty_expr (61)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60, on right: 11 20 21 23 24 33 35 36 37 39
    43 45 46 47 48 49 50 51 52 53 54 55 61 62
while_exp (62)
    on left: 61 62, on right: 40


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program  go to state 3
    classes  go to state 4
    class    go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' features '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: classes .
    3 classes: classes . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 classes: class .

    $default  reduce using rule 2 (classes)


State 6

    4 class: CLASS TYPEID . '{' features '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' features '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 classes: classes class .

    $default  reduce using rule 3 (classes)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . features '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 8 (features)

    features           go to state 14
    nonempty_features  go to state 15
    feature            go to state 16


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' features '}' ';'

    '{'  shift, and go to state 17


State 12

   14 feature: error .

    $default  reduce using rule 14 (feature)


State 13

   11 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' nonempty_expr '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 14

    4 class: CLASS TYPEID '{' features . '}' ';'

    '}'  shift, and go to state 20


State 15

    7 features: nonempty_features .

    $default  reduce using rule 7 (features)


State 16

    9 nonempty_features: feature . ';' nonempty_features
   10                  | feature . ';'

    ';'  shift, and go to state 21


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . features '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 8 (features)

    features           go to state 22
    nonempty_features  go to state 15
    feature            go to state 16


State 18

   11 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' nonempty_expr '}'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 16 (formals)

    formals           go to state 24
    nonempty_formals  go to state 25
    formal            go to state 26


State 19

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 27


State 20

    4 class: CLASS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 28


State 21

    9 nonempty_features: feature ';' . nonempty_features
   10                  | feature ';' .

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (nonempty_features)

    nonempty_features  go to state 29
    feature            go to state 16


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' features . '}' ';'

    '}'  shift, and go to state 30


State 23

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 24

   11 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' nonempty_expr '}'

    ')'  shift, and go to state 32


State 25

   15 formals: nonempty_formals .

    $default  reduce using rule 15 (formals)


State 26

   17 nonempty_formals: formal . ',' nonempty_formals
   18                 | formal .

    ','  shift, and go to state 33

    $default  reduce using rule 18 (nonempty_formals)


State 27

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 12 (feature)


State 28

    4 class: CLASS TYPEID '{' features '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    9 nonempty_features: feature ';' nonempty_features .

    $default  reduce using rule 9 (nonempty_features)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 35


State 31

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 32

   11 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' nonempty_expr '}'

    ':'  shift, and go to state 37


State 33

   17 nonempty_formals: formal ',' . nonempty_formals

    OBJECTID  shift, and go to state 23

    nonempty_formals  go to state 38
    formal            go to state 26


State 34

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    ';'  reduce using rule 34 (expression)

    expression     go to state 54
    nonempty_expr  go to state 55
    while_exp      go to state 56


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 37

   11 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' nonempty_expr '}'

    TYPEID  shift, and go to state 57


State 38

   17 nonempty_formals: formal ',' nonempty_formals .

    $default  reduce using rule 17 (nonempty_formals)


State 39

   60 nonempty_expr: error .

    $default  reduce using rule 60 (nonempty_expr)


State 40

   39 nonempty_expr: IF . nonempty_expr THEN nonempty_expr ELSE nonempty_expr FI

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 58
    while_exp      go to state 56


State 41

   42 nonempty_expr: LET . inner_let

    OBJECTID  shift, and go to state 59

    inner_let  go to state 60


State 42

   61 while_exp: WHILE . nonempty_expr LOOP expression POOL
   62          | WHILE . nonempty_expr LOOP error

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 61
    while_exp      go to state 56


State 43

   43 nonempty_expr: CASE . nonempty_expr OF cases ESAC

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 62
    while_exp      go to state 56


State 44

   44 nonempty_expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 45

   45 nonempty_expr: ISVOID . nonempty_expr

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 64
    while_exp      go to state 56


State 46

   58 nonempty_expr: STR_CONST .

    $default  reduce using rule 58 (nonempty_expr)


State 47

   57 nonempty_expr: INT_CONST .

    $default  reduce using rule 57 (nonempty_expr)


State 48

   59 nonempty_expr: BOOL_CONST .

    $default  reduce using rule 59 (nonempty_expr)


State 49

   35 nonempty_expr: OBJECTID . ASSIGN nonempty_expr
   38              | OBJECTID . '(' expressions ')'
   56              | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 56 (nonempty_expr)


State 50

   54 nonempty_expr: NOT . nonempty_expr

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 67
    while_exp      go to state 56


State 51

   50 nonempty_expr: '~' . nonempty_expr

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 68
    while_exp      go to state 56


State 52

   41 nonempty_expr: '{' . nonempty_block '}'

    error       shift, and go to state 69
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_block  go to state 70
    nonempty_expr   go to state 71
    while_exp       go to state 56


State 53

   55 nonempty_expr: '(' . nonempty_expr ')'

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 72
    while_exp      go to state 56


State 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .

    $default  reduce using rule 13 (feature)


State 55

   33 expression: nonempty_expr .
   36 nonempty_expr: nonempty_expr . '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr . '.' OBJECTID '(' expressions ')'
   46              | nonempty_expr . '+' nonempty_expr
   47              | nonempty_expr . '-' nonempty_expr
   48              | nonempty_expr . '*' nonempty_expr
   49              | nonempty_expr . '/' nonempty_expr
   51              | nonempty_expr . '<' nonempty_expr
   52              | nonempty_expr . LE nonempty_expr
   53              | nonempty_expr . '=' nonempty_expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    LE        [reduce using rule 33 (expression)]
    '<'       [reduce using rule 33 (expression)]
    '='       [reduce using rule 33 (expression)]
    '+'       [reduce using rule 33 (expression)]
    '-'       [reduce using rule 33 (expression)]
    '*'       [reduce using rule 33 (expression)]
    '/'       [reduce using rule 33 (expression)]
    '@'       [reduce using rule 33 (expression)]
    '.'       [reduce using rule 33 (expression)]
    $default  reduce using rule 33 (expression)


State 56

   40 nonempty_expr: while_exp .

    $default  reduce using rule 40 (nonempty_expr)


State 57

   11 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' nonempty_expr '}'

    '{'  shift, and go to state 82


State 58

   36 nonempty_expr: nonempty_expr . '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr . '.' OBJECTID '(' expressions ')'
   39              | IF nonempty_expr . THEN nonempty_expr ELSE nonempty_expr FI
   46              | nonempty_expr . '+' nonempty_expr
   47              | nonempty_expr . '-' nonempty_expr
   48              | nonempty_expr . '*' nonempty_expr
   49              | nonempty_expr . '/' nonempty_expr
   51              | nonempty_expr . '<' nonempty_expr
   52              | nonempty_expr . LE nonempty_expr
   53              | nonempty_expr . '=' nonempty_expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 59

   29 inner_let: OBJECTID . ':' TYPEID ASSIGN expression IN expression
   30          | OBJECTID . ':' TYPEID IN expression
   31          | OBJECTID . ':' TYPEID ASSIGN expression ',' inner_let
   32          | OBJECTID . ':' TYPEID ',' inner_let

    ':'  shift, and go to state 84


State 60

   42 nonempty_expr: LET inner_let .

    $default  reduce using rule 42 (nonempty_expr)


State 61

   36 nonempty_expr: nonempty_expr . '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr . '.' OBJECTID '(' expressions ')'
   46              | nonempty_expr . '+' nonempty_expr
   47              | nonempty_expr . '-' nonempty_expr
   48              | nonempty_expr . '*' nonempty_expr
   49              | nonempty_expr . '/' nonempty_expr
   51              | nonempty_expr . '<' nonempty_expr
   52              | nonempty_expr . LE nonempty_expr
   53              | nonempty_expr . '=' nonempty_expr
   61 while_exp: WHILE nonempty_expr . LOOP expression POOL
   62          | WHILE nonempty_expr . LOOP error

    LOOP  shift, and go to state 85
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 62

   36 nonempty_expr: nonempty_expr . '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr . '.' OBJECTID '(' expressions ')'
   43              | CASE nonempty_expr . OF cases ESAC
   46              | nonempty_expr . '+' nonempty_expr
   47              | nonempty_expr . '-' nonempty_expr
   48              | nonempty_expr . '*' nonempty_expr
   49              | nonempty_expr . '/' nonempty_expr
   51              | nonempty_expr . '<' nonempty_expr
   52              | nonempty_expr . LE nonempty_expr
   53              | nonempty_expr . '=' nonempty_expr

    OF   shift, and go to state 86
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 63

   44 nonempty_expr: NEW TYPEID .

    $default  reduce using rule 44 (nonempty_expr)


State 64

   36 nonempty_expr: nonempty_expr . '@' TYPEID '.' OBJECTID '(' expressions ')'
   37              | nonempty_expr . '.' OBJECTID '(' expressions ')'
   45              | ISVOID nonempty_expr .
   46              | nonempty_expr . '+' nonempty_expr
   47              | nonempty_expr . '-' nonempty_expr
   48              | nonempty_expr . '*' nonempty_expr
   49              | nonempty_expr . '/' nonempty_expr
   51              | nonempty_expr . '<' nonempty_expr
   52              | nonempty_expr . LE nonempty_expr
   53              | nonempty_expr . '=' nonempty_expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 45 (nonempty_expr)


State 65

   35 nonempty_expr: OBJECTID ASSIGN . nonempty_expr

    error       shift, and go to state 39
    IF          shift, and go to state 40
    LET         shift, and go to state 41
    WHILE       shift, and go to state 42
    CASE        shift, and go to state 43
    NEW         shift, and go to state 44
    ISVOID      shift, and go to state 45
    STR_CONST   shift, and go to state 46
    INT_CONST   shift, and go to state 47
    BOOL_CONST  shift, and go to state 48
    OBJECTID    shift, and go to state 49
    NOT         shift, and go to state 50
    '~'         shift, and go to state 51
    '{'         shift, and go to state 52
    '('         shift, and go to state 53

    nonempty_expr  go to state 87
    while_exp      go to state 56


State 66

   38 nonempty_expr: OBJECTID '(' . expressions ')'
